assets/less/site/footer.less
.site-footer {
  align-items: center;
  display: flex;
  flex-direction: column;
  padding: 3rem 0 4.5rem;
}

.social {
  display: flex;
  margin-bottom: 2rem;
}

.social-item {
  color: var(--secondary-text-color);
  line-height: 0;
  margin: 0 4px;

  .icon {
    height: 24px;
    width: 24px;
  }
}

.copyright {
  color: var(--secondary-text-color);
  font-size: 1.2rem;
  letter-spacing: -.02rem;

  a {
    color: var(--secondary-text-color);

    &:hover {
      opacity: 1;
      text-decoration: underline;
    }
  }
}

.footer-nav {
  align-items: center;
  display: flex;
  margin-top: .5rem;

  .menu-item {
    align-items: center;
    color: var(--secondary-text-color);
    display: flex;
    font-size: 1.2rem;
    font-weight: 400;
    margin: 0;

    & + .menu-item:before {
      content: "\02022";
      font-family: serif;
      line-height: 1;
      padding: 0 .7rem;
    }

    &:hover {
      opacity: 1;
    }
  }
}

.theme-icon {
  height: 1.1rem;
  width: 1.1rem;
}

.theme-text {
  margin-left: .3rem;
}

.theme-icon-dark,
.theme-icon-light {
  display: none;
}

.theme-dark {
  .theme-icon-system,
  .theme-icon-light {
    display: none;
  }
  
  .theme-icon-dark {
    display: block;
  }
}

.theme-light {
  .theme-icon-system,
  .theme-icon-dark {
    display: none;
  }
  
  .theme-icon-light {
    display: block;
  }
}

